
syntax = "proto3";

service OrderOperation {
  //hotel create order
  rpc HotelCreateOrder (HotelCreateOrderRequest) returns (HotelCreateOrderReply) {}

  //query order
  rpc QueryOrder (QueryOrderRequest) returns (QueryOrderReply) {}
}

message HotelCreateOrderRequest {
  string hotel_id=1;
  string job = 2;
  int32 date = 3;
  int32 duration = 4;
  int32 count = 5;
  int32 count_male = 6;
  int32 count_female = 7;
  string adviser_id = 8;
}


message HotelCreateOrderReply {
  string order_id = 1;
  string create_result =2;
}

message QueryOrderRequest {
  string order_id = 1;
}

message QueryOrderReply {
  string hotel_id = 1;
  string job = 2;
  int32 date = 3;
  int32 duration = 4;
  int32 count = 5;
  int32 count_male = 6;
  int32 count_female = 7;
  string adviser_id = 8;
  int32 mode = 9;
}
